[gd_scene load_steps=2 format=2]

[ext_resource path="res://Components/brain/action_lobe/action/action.gd" type="Script" id=1]

[node name="action" type="Node"]
script = ExtResource( 1 )

[node name="cooldown_timer" type="Timer" parent="."]
one_shot = true

[connection signal="tree_exiting" from="." to="." method="_on_action_tree_exiting"]
[connection signal="timeout" from="cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
